--- a/argocd/manifests/certificates/base/crypto-stop-loss-bot-certificate.yaml
+++ b/argocd/manifests/certificates/base/crypto-stop-loss-bot-certificate.yaml
@@ -8,14 +8,14 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
     argocd.argoproj.io/sync-options: Prune=true
 spec:
-  secretName: crypto-bot-vps-jmsola-dev-cert-secret
-  commonName: "crypto-bot.vps.jmsola.dev"
+  secretName: crypto-bot-vps-pmugica-dev-cert-secret
+  commonName: "crypto-bot.vps.pmugica.dev"
   issuerRef: 
     kind: ClusterIssuer
     name: letsencrypt-prod
     group: cert-manager.io
   dnsNames:
-    - "crypto-bot.vps.jmsola.dev"
+    - "crypto-bot.vps.pmugica.dev"
   secretTemplate:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
