--- a/argocd/project.yaml
+++ b/argocd/project.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: vps-jmsola-dev-project
+  name: vps-pmugica-dev-project
   namespace: argocd
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
@@ -23,15 +23,15 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: vps-jmsola-dev
+  name: vps-pmugica-dev
   namespace: argocd
   finalizers:
   - argocd.argoproj.io/resources-finalizer
 spec:
-  project: vps-jmsola-dev-project
+  project: vps-pmugica-dev-project
   destination:
     server: https://kubernetes.default.svc
-    namespace: vps-jmsola-dev
+    namespace: vps-pmugica-dev
   source:
     path: argocd/apps
     repoURL: https://github.com/jsoladur/contabo-vps-gitops-argocd.git
