--- a/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
+++ b/argocd/manifests/crypto-stop-loss-bot/base/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: crypto-stop-loss-bot
-          image: docker.io/josemariasoladuran/crypto-stop-loss-bot:0.14.0
+          image: docker.io/josemariasoladuran/crypto-stop-loss-bot:0.24.5
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
@@ -36,7 +36,7 @@ spec:
             - name: BIT2ME_API_BASE_URL
               value: "https://gateway.bit2me.com"
             - name: AUTHORIZED_GOOGLE_USER_EMAILS_COMMA_SEPARATED
-              value: "josemaria.sola.duran@gmail.com,pmugica3092@gmail.com"
+              value: "pellomugica@gmail.com"
             - name: GOOGLE_OAUTH_CLIENT_ID
               valueFrom:
                 secretKeyRef:
