--- a/argocd.apps.removed/crypto-stop-loss-bot.yaml
+++ b/argocd.apps.removed/crypto-stop-loss-bot.yaml
@@ -17,7 +17,7 @@ metadata:
   finalizers:
   - argocd.argoproj.io/resources-finalizer
 spec:
-  project: vps-jmsola-dev-project
+  project: vps-pmugica-dev-project
   destination:
     server: https://kubernetes.default.svc
     namespace: crypto-stop-loss-bot
